# kg3_info_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  index.md  pyproject.toml
.github/workflows/: docker-publish.yml
kg3_info_bot/: common.py  keyboards.py  main.py  messages.py
kg3_info_bot/resources/: contacts.md  koshtorys.md  main.md  pravlinnya.md  vnesky.md
tests/: test_kg3_info_bot.py
